<resources>
    <string name="app_name" translatable="false">Weather Watch</string>
    <!-- Shared Preferences -->
    <string name="shared_pref" translatable="false">com.iti.weatherwatch.ww</string>
    <string name="lat" translatable="false">lat</string>
    <string name="location" translatable="false">location</string>
    <string name="lon" translatable="false">lon</string>
    <string name="timeZone" translatable="false">timeZone</string>
    <string name="unitsSetting" translatable="false">units</string>
    <string name="languageSetting" translatable="false">language</string>
    <string name="isMap" translatable="false">isMap</string>
    <!-- Notification -->
    <string name="channel_name" translatable="false">channel_name_ww</string>
    <string name="channel_description" translatable="false">channel_description_ww</string>
    <!-- Strings -->
    <string name="alerts">ِAlerts</string>
    <string name="alert_dialog_body">Advanced -> Display over other apps</string>
    <string name="arabic">Arabic</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_Done">Done</string>
    <string name="btn_enable">Enable</string>
    <string name="btn_ok">OK</string>
    <string name="btn_save">Save</string>
    <string name="choose_language">Language</string>
    <string name="choose_location_method">Location</string>
    <string name="clouds">Clouds</string>
    <string name="date_picker">Choose date</string>
    <string name="english">English</string>
    <string name="favorites">Favorites</string>
    <string name="from">From</string>
    <string name="gps">GPS</string>
    <string name="home">Home</string>
    <string name="Humidity">Humidity</string>
    <string name="image_content_description">image content description</string>
    <string name="initial_setting">Initial Settings</string>
    <string name="isFavorite">isFavorite</string>
    <string name="location_enabled">Enable Location</string>
    <string name="location_permission">Enable Location permission</string>
    <string name="location_text">location</string>
    <string name="map">Map</string>
    <string name="map_dialog_title">Do you want to change your location on map again?</string>
    <string name="no">No</string>
    <string name="no_alerts_yet">No Alerts Yet</string>
    <string name="no_favorites_yet">No Favorites Yet</string>
    <string name="overlay_title">Display Permission Needed</string>
    <string name="pressure">Pressure</string>
    <string name="seven_days_forecast">7-days forecast</string>
    <string name="time_picker">Select Appointment time</string>
    <string name="title_settings">Settings</string>
    <string name="to">To</string>
    <string name="twenty_four_hour_forecast">24-hour forecast</string>
    <string name="units">Temperature &amp; Wind Speed</string>
    <string name="unit_celsius">Standard – Celsius  –  meter/sec</string>
    <string name="unit_fahrenheit">Imperial – Fahrenheit  –  miles/hour</string>
    <string name="unit_kelvin">Metric – Kelvin  –  meter/sec</string>
    <string name="uv">UV</string>
    <string name="visibility">Visibility</string>
    <string name="wind_speed">Wind speed</string>
    <string name="yes">Yes</string>
</resources>
